package in.ashwanik.pdp.strategy;

public enum CacheType {
    IN_MEMORY,
    REDIS,
    REDIS_FALL_BACK_TO_IN_MEMORY
}
