@startuml

title __STRATEGY's Class Diagram__\n

  namespace in.ashwanik.pdp.strategy {
    interface in.ashwanik.pdp.strategy.CacheService {
        {abstract} + get()
        {abstract} + save()
    }
  }
  

  namespace in.ashwanik.pdp.strategy {
    class in.ashwanik.pdp.strategy.CacheServiceImpl {
        - strategies : EnumMap<CacheType, CacheStrategy>
        + get()
        + save()
        ~ CacheServiceImpl()
    }
  }
  

  namespace in.ashwanik.pdp.strategy {
    interface in.ashwanik.pdp.strategy.CacheStrategy {
        {abstract} + get()
        {abstract} + save()
    }
  }
  

  namespace in.ashwanik.pdp.strategy {
    enum CacheType {
      IN_MEMORY
      REDIS
      REDIS_FALL_BACK_TO_IN_MEMORY
    }
  }
  

  namespace in.ashwanik.pdp.strategy {
    class in.ashwanik.pdp.strategy.InMemoryCacheStrategy {
        - cache : Map<String, String>
        + get()
        + save()
        ~ InMemoryCacheStrategy()
    }
  }
  

  namespace in.ashwanik.pdp.strategy {
    class in.ashwanik.pdp.strategy.RedisCacheStrategy {
        + get()
        + save()
        ~ RedisCacheStrategy()
    }
  }
  

  namespace in.ashwanik.pdp.strategy {
    interface in.ashwanik.pdp.strategy.RedisClient {
        {abstract} + get()
        {abstract} + save()
    }
  }
  

  namespace in.ashwanik.pdp.strategy {
    class in.ashwanik.pdp.strategy.RedisFallBackStrategy {
        + get()
        + save()
        ~ RedisFallBackStrategy()
    }
  }
  

  in.ashwanik.pdp.strategy.CacheServiceImpl .up.|> in.ashwanik.pdp.strategy.CacheService
  in.ashwanik.pdp.strategy.InMemoryCacheStrategy .up.|> in.ashwanik.pdp.strategy.CacheStrategy
  in.ashwanik.pdp.strategy.RedisCacheStrategy .up.|> in.ashwanik.pdp.strategy.CacheStrategy
  in.ashwanik.pdp.strategy.RedisCacheStrategy o-- in.ashwanik.pdp.strategy.RedisClient : redisClient
  in.ashwanik.pdp.strategy.RedisFallBackStrategy .up.|> in.ashwanik.pdp.strategy.CacheStrategy
  in.ashwanik.pdp.strategy.RedisFallBackStrategy o-- in.ashwanik.pdp.strategy.CacheStrategy : inMemoryCache
  in.ashwanik.pdp.strategy.RedisFallBackStrategy o-- in.ashwanik.pdp.strategy.CacheStrategy : redisCache


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
